--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "textual>=0.47.0",
     "Mastodon.py>=1.8.0",
+    "tomli-w>=1.0.0",
 ]
 
 [project.scripts]
